@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing true
skinparam linetype ortho
'skinparam linetype orto


skinparam classAttributeIconSize 0

'left to right direction

class  GetDealListUI {
}

class GetDealListController {
   + getDealsOrder()
   + getBubbleSort (double[] areaProperty)
   + getInsertionSort (double[] areaProperty)
   + sortDeals(List<Property> properties, int method)
   + getPropertySorted (List<Property> propertyList ,double[] areaProperty)
}



class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getPurchaseOrderRepository()
}

class PurchaseOrderRepository{
   + getDealsFromOrder()

}

class PurchaseOrder{
    - Double orderAmount;
    - Announcement announcement;
    - Client client;
    - Integer wasAccepted;
    - DateTime creationDate
}

class BubbleSortAlgorithm{
    + sort(double[] arr)

}

class InsertionSortAlgorithm{
    + sort(double[] arr)
 }









Repositories --> Repositories : instance

GetDealListUI .> GetDealListController

GetDealListController .-> Repositories : repositories

GetDealListController --> PurchaseOrderRepository

GetDealListController --> BubbleSortAlgorithm

GetDealListController --> InsertionSortAlgorithm

PurchaseOrderRepository --> PurchaseOrder




@enduml